example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: attendance-app.info
      http:
        paths:
          - path: /attendance
            pathType: Prefix
            backend:
              service:
                name: attendance-micro-app
                port:
                  number: 5002
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: some-name
                port:
                  number: some_port
          - path: /v3
            pathType: Prefix
            backend:
              service:
                name: webtest
                port:
                  number: 8080
