roll-call-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roll-call-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: roll-call.info
      http:
        paths:
          - path: /attendance
            pathType: Prefix
            backend:
              service:
                name: attendance-micro-app
                port:
                  number: 5002
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-micro-app
                port:
                  number: 5001
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: db-micro-app
                port:
                  number: 5003
